--- a/env.yml
+++ b/env.yml
@@ -31,7 +31,7 @@ dependencies:
       - async-timeout==4.0.3
       - attrs==23.2.0
       - beautifulsoup4==4.12.3
-      - bitsandbytes==0.45.1.dev0
+      # - bitsandbytes==0.45.1.dev0
       - certifi==2024.2.2
       - charset-normalizer==3.3.2
       - click==8.1.7
@@ -43,7 +43,7 @@ dependencies:
       - evaluate==0.4.0
       - filelock==3.16.1
       - frozenlist==1.4.1
-      - fsspec==2024.10.0
+      # - fsspec==2024.10.0
       - gdown==5.2.0
       - gitdb==4.0.11
       - gitpython==3.1.43
